# GaiaView

./: .gitignore  CMakeLists.txt  LICENSE.md  Main.qml  main.cpp
.github/workflows/: ci.yaml
include/connection/: SerialPortManager.h
qml/: Main.qml  Screen.qml  SerialPortDialog.qml  SerialPortWindow.qml
qml/Components/: Button.qml
src/: CMakeLists.txt  main.cpp
src/connection/: SerialPortManager.cpp  SerialPortManager.h
